# time-audit

./: "Fara-7B\345\215\217\344\275\234\346\234\272\344\274\232\350\257\204\344\274\260.md"  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
config/: time_audit.yaml
contrib/screenpipe-autostart/: README.md  com.screenpipe.recorder.plist  install.sh
docs/: STRATEGY.md  automation-opportunity-schema.json  automation-opportunity-schema.md  automation-opportunity-schema.v1.json
docs/superpowers/specs/: 2026-06-08-multi-source-skill-mining-design.md
pipes/time-audit/: README.md  pipe.md
tests/: test_adapter_claude.py  test_adapter_openclaw.py  test_adapter_screenpipe.py  test_adapter_shell.py  test_command_miner.py  test_llm_providers.py  test_report_builder.py  test_report_query.py  test_schema_conformance.py  test_sources_registry.py
time_audit/: __init__.py  __main__.py  aos_export.py  main.py  mcp_server.py
time_audit/core/: __init__.py  command_miner.py  db_reader.py  event_compressor.py  frequency_analyzer.py  llm_analyzer.py  llm_providers.py  prompts.py  report_builder.py  report_query.py
time_audit/sources/: __init__.py  base.py  claude_code.py  openclaw.py  registry.py  screenpipe.py  shell_history.py
