[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-audit"
version = "2.0.0"
description = "本地 LLM 行为分析中间件 — 把 Screenpipe 录制变成 LLM 可消化的会话片段，让本地 AI 找出可 skill 化的工作模式。"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]
keywords = ["screenpipe", "ollama", "local-llm", "behavior-analysis", "automation", "skill-mining"]

[project.optional-dependencies]
# 仅 MCP server 模式需要；核心 CLI 保持零额外依赖。装法：pip install -e ".[mcp]"
mcp = [
    "mcp>=1.2",
]

[project.urls]
Homepage = "https://github.com/chenshuai9101/time-audit"
Repository = "https://github.com/chenshuai9101/time-audit.git"

[project.scripts]
time-audit = "time_audit.main:main"
time-audit-mcp = "time_audit.mcp_server:main"

[tool.setuptools.packages.find]
include = ["time_audit*"]
